--- a/index.html
+++ b/index.html
@@ -1,14 +1,24 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=h1, initial-scale=1.0">
-    <title>1233e</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css"><!--linka o arquivo Css-->
+    <title>Rádio Escola JP</title><!--título que aparece na  Aba-->
+    <link rel="icon" type="image/png" href="images/nomedaimagem.png"><!--adiciona icone na aba do navegador-->
 </head>
 <body>
-    <h1>fazueli</h1>
+    <header><!--aqui colocaremos o cabeçalho do nosso site em outras aulas--></header>
+    <main><!--main é a parte principal do site, aqui que colocaremos os botões e audios--></main>
+    <h1>Titulo da Sua Página</h1>
+    <section class="teclado"><!--nessa sessão colocaremos os botões do nosso teclado-->
+        <button class="tecla tecla_nomedatecla"><img src="image/aplausos.svg" alt=""></button>
+        <!--a tag button cria um botão em nossa página, você deve criar um botão para casa som da sua rádio, 
+        no lugar do nome da tecla você deve colocar o nome Ex.: tecla de vaia você coloca vaia-->
+    </section>
+    <audio src="sounds/nomedoarquivodesom.wav" id="som_tecla_nomedatecla"></audio>
+    <!--aqui você deve carregar todos os arquivos de audio que usaremos-->
 
-    <p>macaco</p>
-
+    </section>
 </body>
 </html>
