--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     <main><!--main é a parte principal do site, aqui que colocaremos os botões e audios--></main>
     <h1>Bolsonaro 2026</h1>
     <section class="teclado"><!--nessa sessão colocaremos os botões do nosso teclado-->
-        <button class="tecla tecla_nomedatecla"><img src="image/aplausos.svg" alt=""></button>
+        <button class="tecla tecla_aplausos"><img src="image/aplausos.svg" alt=""></button>
+        <button class="tecla tecla_dinheiro"><img src="image/dinheiro.svg" alt=""></button>
         <!--a tag button cria um botão em nossa página, você deve criar um botão para casa som da sua rádio, 
         no lugar do nome da tecla você deve colocar o nome Ex.: tecla de vaia você coloca vaia-->
     </section>
