--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <button class="tecla tecla_aplausos"><img src="image/aplausos.svg" alt=""></button>
         <button class="tecla tecla_dinheiro"><img src="image/dinheiro.svg" alt=""></button>
         <button class="tecla tecla_bateria"><img src="image/bateria.png" alt=""></button>
+        <button class="tecla tecla_efeitos_sonoros"><img src="image/efeitos_sonoros.png" alt=""></button>
         <!--a tag button cria um botão em nossa página, você deve criar um botão para casa som da sua rádio, 
         no lugar do nome da tecla você deve colocar o nome Ex.: tecla de vaia você coloca vaia-->
     </section>
