--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <button class="tecla tecla_efeitos_sonoros"><img src="image/efeitos_sonoros.png" alt=""></button>
         <button class="tecla tecla_errado"><img src="image/errado.svg" alt=""></button>
         <button class="tecla tecla_grilo"><img src="image/grilo.svg" alt=""></button>
-        <button class="tecla tecla_risada"><img src="image/risada.svg" alt=""></>button>
+        <button class="tecla tecla_risada"><img src="image/risada.svg" alt=""></button>
         <!--a tag button cria um botão em nossa página, você deve criar um botão para casa som da sua rádio, 
         no lugar do nome da tecla você deve colocar o nome Ex.: tecla de vaia você coloca vaia-->
     </section>
