--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <button class="tecla tecla_grilo"><img src="image/grilo.svg" alt=""></button>
         <button class="tecla tecla_risada"><img src="image/risada.svg" alt=""></button>
         <button class="tecla tecla_tambores"><img src="image/tambores.svg" alt=""></button>
+        <button class="tecla tecla_trombeta"><img src="image/trombeta.svg" alt=""></button>
         <!--a tag button cria um botão em nossa página, você deve criar um botão para casa som da sua rádio, 
         no lugar do nome da tecla você deve colocar o nome Ex.: tecla de vaia você coloca vaia-->
     </section>
