--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header><!--aqui colocaremos o cabeçalho do nosso site em outras aulas--></header>
     <main><!--main é a parte principal do site, aqui que colocaremos os botões e audios--></main>
-    <h1>Bolsonaro 2026</h1>
+    <h1>BUUUUSSS</h1>
     <section class="teclado"><!--nessa sessão colocaremos os botões do nosso teclado-->
         <button class="tecla tecla_aplausos"><img src="image/aplausos.svg" alt=""></button>
         <button class="tecla tecla_dinheiro"><img src="image/dinheiro.svg" alt=""></button>
