--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
         no lugar do nome da tecla você deve colocar o nome Ex.: tecla de vaia você coloca vaia-->
     </section>
     <audio src="sounds/nomedoarquivodesom.wav" id="som_tecla_nomedatecla"></audio>
+    <audio src="sounds/aplausos.wav" id="som_tecla_aplausos"></audio>
     <!--aqui você deve carregar todos os arquivos de audio que usaremos-->
 
     </section>
