--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     </section>
     <audio src="sounds/nomedoarquivodesom.wav" id="som_tecla_nomedatecla"></audio>
     <audio src="sounds/aplausos.wav" id="som_tecla_aplausos"></audio>
+    <audio src="sounds/dinheiro.wav" id="som_tecla_dinheiro"></audio>
     <!--aqui você deve carregar todos os arquivos de audio que usaremos-->
 
     </section>
