--- a/index.html
+++ b/index.html
@@ -14,8 +14,6 @@
     <section class="teclado"><!--nessa sessão colocaremos os botões do nosso teclado-->
         <button class="tecla tecla_aplausos"><img src="image/aplausos.svg" alt=""></button>
         <button class="tecla tecla_dinheiro"><img src="image/dinheiro.svg" alt=""></button>
-        <button class="tecla tecla_bateria"><img src="image/bateria.png" alt=""></button>
-        <button class="tecla tecla_efeitos_sonoros"><img src="image/efeitos_sonoros.png" alt=""></button>
         <button class="tecla tecla_errado"><img src="image/errado.svg" alt=""></button>
         <button class="tecla tecla_grilo"><img src="image/grilo.svg" alt=""></button>
         <button class="tecla tecla_risada"><img src="image/risada.svg" alt=""></button>
@@ -29,7 +27,7 @@
     <audio src="sounds/nomedoarquivodesom.wav" id="som_tecla_nomedatecla"></audio>
     <audio src="sounds/aplausos.wav" id="som_tecla_aplausos"></audio>
     <audio src="sounds/dinheiro.wav" id="som_tecla_dinheiro"></audio>
-    <audio src="sounds/"
+    <audio src="sounds/errado.wav" id="som_tecla_errado"></audio>
     <!--aqui você deve carregar todos os arquivos de audio que usaremos-->
 
     </section>
