--- a/index.html
+++ b/index.html
@@ -31,5 +31,6 @@
     <!--aqui você deve carregar todos os arquivos de audio que usaremos-->
 
     </section>
+<script src="main.js"></script>    
 </body>
 </html>
