--- a/index.html
+++ b/index.html
@@ -24,13 +24,15 @@
         <!--a tag button cria um botão em nossa página, você deve criar um botão para casa som da sua rádio, 
         no lugar do nome da tecla você deve colocar o nome Ex.: tecla de vaia você coloca vaia-->
     </section>
-    <audio src="sounds/nomedoarquivodesom.wav" id="som_tecla_nomedatecla"></audio>
+
     <audio src="sounds/aplausos.wav" id="som_tecla_aplausos"></audio>
     <audio src="sounds/dinheiro.wav" id="som_tecla_dinheiro"></audio>
     <audio src="sounds/errado.wav" id="som_tecla_errado"></audio>
+    <audio src="sounds/errado.wav" id="som_tecla_grilo"></audio>
+
     <!--aqui você deve carregar todos os arquivos de audio que usaremos-->
 
     </section>
-<script src="main.js"></script>    
+    <script src="main.js"></script>    
 </body>
 </html>
