--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
     <audio src="sounds/aplausos.wav" id="som_tecla_aplausos"></audio>
     <audio src="sounds/dinheiro.wav" id="som_tecla_dinheiro"></audio>
     <audio src="sounds/errado.wav" id="som_tecla_errado"></audio>
-    <audio src="sounds/errado.wav" id="som_tecla_grilo"></audio>
+    <audio src="sounds/grilo.wav" id="som_tecla_grilo"></audio>
+    
 
     <!--aqui você deve carregar todos os arquivos de audio que usaremos-->
 
