--- a/index.html
+++ b/index.html
@@ -29,8 +29,11 @@
     <audio src="sounds/dinheiro.wav" id="som_tecla_dinheiro"></audio>
     <audio src="sounds/errado.wav" id="som_tecla_errado"></audio>
     <audio src="sounds/grilo.wav" id="som_tecla_grilo"></audio>
-    
-
+    <audio src="sounds/risada.wav" id="som_tecla_risada"></audio>
+    <audio src="sounds/tambores.wav" id="som_tecla_tambores"></audio>
+    <audio src="sounds/trombeta.wav" id="som_tecla_trombeta"></audio>
+    <audio src="sounds/vaia.wav" id="som_tecla_vaia"></audio>
+<audio src="sounds/vitoria.wav" id="som_tecla_vitoria"></audio>
     <!--aqui você deve carregar todos os arquivos de audio que usaremos-->
 
     </section>
